# local-general-chat-researcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/local_general_chat_researcher/: graph.py  prompts.py  state.py  utils.py
